--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="app" class="max-w-7xl mx-auto p-4 sm:p-6 lg:p-8 hidden">
         <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8 gap-4">
             <div class="mb-4 sm:mb-0">
-                <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos</h1>
+                <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos 1.1</h1>
                 <p id="userEmail" class="text-gray-600 mt-1">Bem-vindo(a)!</p>
             </div>
             <div class="flex flex-col sm:flex-row gap-4 w-full sm:w-auto">
@@ -125,6 +125,28 @@
     const updateFinancials = () => { let grandTotal = 0; DOM.financialsContainer.querySelectorAll('.financial-item').forEach(item => { const quantity = parseFloat(item.querySelector('.financial-quantity').value) || 0; const price = parseFloat(item.querySelector('.financial-price').value) || 0; const subtotal = quantity * price; item.querySelector('.financial-subtotal').textContent = `R$ ${subtotal.toFixed(2)}`; grandTotal += subtotal; }); const downPayment = parseFloat(DOM.downPayment.value) || 0; DOM.grandTotal.textContent = `R$ ${grandTotal.toFixed(2)}`; DOM.remainingTotal.textContent = `R$ ${(grandTotal - downPayment).toFixed(2)}`; };
     const updatePartQuantity = (partId) => { const partElement = DOM.partsContainer.querySelector(`.part-item[data-part-id="${partId}"]`); if (!partElement) return; let totalQuantity = 0; partElement.querySelectorAll('.size-input').forEach(input => { totalQuantity += parseInt(input.value) || 0; }); const financialRow = DOM.financialsContainer.querySelector(`.financial-item[data-part-id="${partId}"]`); if (financialRow) { financialRow.querySelector('.financial-quantity').value = totalQuantity; } updateFinancials(); };
 
+    // FUNÇÕES DE UPLOAD DE IMAGEM (RESTAURADAS)
+    const fileToBase64 = (file) => new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.readAsDataURL(file);
+        reader.onload = () => resolve(reader.result.split(',')[1]);
+        reader.onerror = error => reject(error);
+    });
+
+    const uploadToImgBB = async (base64Image) => {
+        const formData = new FormData();
+        formData.append('image', base64Image);
+        try {
+            const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, { method: 'POST', body: formData });
+            const data = await response.json();
+            if (data.success) return data.data.url;
+            throw new Error(data.error.message);
+        } catch (error) {
+            console.error('Erro no upload para ImgBB:', error);
+            return null;
+        }
+    };
+
     const addPart = (partData = {}) => {
         partCounter++;
         const partTpl = document.getElementById('partTemplate').content.cloneNode(true);
@@ -192,7 +214,6 @@
         return orderData;
     };
     
-    // ATUALIZAÇÃO: Adicionado log detalhado do erro no console.
     const saveOrder = async (e) => {
         e.preventDefault();
         DOM.saveBtn.disabled = true;
@@ -211,7 +232,7 @@
             }
             DOM.orderModal.classList.add('hidden');
         } catch (error) {
-            console.error("ERRO DETALHADO AO SALVAR:", error); // Linha adicionada para diagnóstico
+            console.error("ERRO DETALHADO AO SALVAR:", error);
             showInfoModal('Erro ao salvar o pedido.');
         } finally {
             DOM.saveBtn.disabled = false;
