--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="app" class="max-w-7xl mx-auto p-4 sm:p-6 lg:p-8 hidden">
         <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8 gap-4">
             <div class="mb-4 sm:mb-0">
-                <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos 1.6</h1>
+                <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos 1.7</h1>
                 <p id="userEmail" class="text-gray-600 mt-1">Bem-vindo(a)!</p>
             </div>
             <div class="flex flex-col sm:flex-row gap-4 w-full sm:w-auto">
@@ -137,13 +137,13 @@
         const mockupContainer = content.querySelector('#mockupContainerPdf');
         
         if (mockupContainer) {
-            mockupContainer.style.padding = '20px'; // Adiciona margem interna
+            mockupContainer.style.padding = '20px';
             mockupContainer.style.flexDirection = 'column';
             mockupContainer.style.gap = '20px';
             mockupContainer.querySelectorAll('.mockup-image').forEach(img => {
                 img.style.width = '100%';
                 img.style.height = 'auto';
-                img.style.maxWidth = '400px';
+                img.style.maxWidth = '500px';
             });
         }
 
@@ -162,11 +162,11 @@
             let heightLeft = imgHeight;
             let position = 0;
 
-            pdf.addImage(imgData, 'PNG', 0, position, pdfWidth, imgHeight);
+            pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, imgHeight);
             heightLeft -= pageHeight;
 
             while (heightLeft > 0) {
-                position -= pageHeight; // Move a "janela" da imagem para baixo
+                position -= pageHeight;
                 pdf.addPage();
                 pdf.addImage(imgData, 'PNG', 0, position, pdfWidth, imgHeight);
                 heightLeft -= pageHeight;
@@ -177,7 +177,6 @@
             console.error("Erro ao gerar PDF:", error);
             showInfoModal("Não foi possível gerar o PDF.");
         } finally {
-            // Restaura os estilos originais para não afetar a visualização na tela
             if (mockupContainer) {
                 mockupContainer.style.padding = '';
                 mockupContainer.style.flexDirection = '';
