--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="app" class="max-w-7xl mx-auto p-4 sm:p-6 lg:p-8 hidden">
         <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8 gap-4">
             <div class="mb-4 sm:mb-0">
-                <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos 1.2</h1>
+                <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos 1.3</h1>
                 <p id="userEmail" class="text-gray-600 mt-1">Bem-vindo(a)!</p>
             </div>
             <div class="flex flex-col sm:flex-row gap-4 w-full sm:w-auto">
@@ -113,7 +113,27 @@
     </template>
     <template id="comumPartContentTemplate"><button type="button" class="toggle-sizes-btn mt-2 bg-blue-100 text-blue-800 text-sm font-semibold py-1 px-3 rounded-lg hover:bg-blue-200">Tamanhos</button><div class="sizes-grid hidden mt-3 space-y-4"></div></template>
     <template id="detalhadoPartContentTemplate"><div class="detailed-items-list space-y-2 mt-3"><div class="grid grid-cols-12 gap-2 font-semibold text-sm px-1"><div class="col-span-5">Nome</div><div class="col-span-4">Tamanho</div><div class="col-span-2">Número</div><div class="col-span-1"></div></div></div><button type="button" class="add-detailed-row-btn mt-2 bg-gray-200 text-gray-800 text-sm py-1 px-3 rounded-lg hover:bg-gray-300">+ Adicionar Linha</button></template>
-    <template id="financialRowTemplate"><div class="financial-item grid grid-cols-4 gap-4 items-center"><p class="font-semibold financial-part-name col-span-1">Peça 1</p><input type="number" placeholder="Qtd" class="p-2 border rounded-md w-full financial-quantity" readonly><input type="number" step="0.01" placeholder="Valor Unitário (R$)" class="p-2 border rounded-md w-full financial-price"><p class="font-bold text-right financial-subtotal">R$ 0,00</p></div></template>
+    
+    <template id="financialRowTemplate">
+        <div class="financial-item grid grid-cols-4 gap-4 items-end">
+            <p class="font-semibold financial-part-name col-span-1">Peça 1</p>
+            <div>
+                <label class="text-xs font-semibold text-gray-600">Quantidade</label>
+                <input type="number" class="p-2 border rounded-md w-full bg-gray-100 financial-quantity" readonly>
+            </div>
+            <div>
+                <label class="text-xs font-semibold text-gray-600">Valor Unitário</label>
+                <div class="flex items-center">
+                    <span class="text-gray-500 mr-2">R$</span>
+                    <input type="number" step="0.01" class="p-2 border rounded-md w-full financial-price">
+                </div>
+            </div>
+            <div class="text-right">
+                 <label class="text-xs font-semibold text-gray-600">Subtotal</label>
+                <p class="font-bold text-lg financial-subtotal">R$ 0,00</p>
+            </div>
+        </div>
+    </template>
 
 <datalist id="part-type-list"></datalist>
 <datalist id="part-material-list"></datalist>
